feat: deploy comprehensive penetration testing toolkit
Security Tools Container includes:
- Network scanning: nmap with NSE scripts
- Web application testing: nikto, dirb, gobuster
- SQL injection: sqlmap with advanced features
- Password attacks: hydra for brute force
- Network utilities: netcat, curl, wget
- Python3 ecosystem for custom tools

Optimized for:
- ARM64 compatibility (Apple Silicon)
- Educational penetration testing
- Realistic security assessment workflows

Container provides isolated, safe environment for
learning ethical hacking techniques.

[Security-Lab: PenTest-Tools]

--- a/security-tools/Dockerfile
+++ b/security-tools/Dockerfile
@@ -1,14 +1,27 @@
-FROM kalilinux/kali-rolling
+FROM ubuntu:22.04
+
+# Avoid interactive prompts during package installation
+ENV DEBIAN_FRONTEND=noninteractive
 
 # Update and install security tools
 RUN apt-get update && apt-get install -y \
     nmap \
     curl \
     wget \
-    sqlmap \
+    python3 \
+    python3-pip \
+    git \
     nikto \
     dirb \
+    hydra \
+    netcat \
+    dnsutils \
+    net-tools \
+    iputils-ping \
     && rm -rf /var/lib/apt/lists/*
+
+# Install sqlmap via pip (more reliable on ARM64)
+RUN pip3 install sqlmap
 
 # Set working directory
 WORKDIR /tools
